# rqcopt_hpc

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/benchmark/: benchmark_12_qubits.c  benchmark_12_qubits_data.hdf5  benchmark_12_qubits_data.py  benchmark_16_qubits.c  benchmark_16_qubits_data.hdf5  benchmark_16_qubits_data.py
examples/ising1d/: io_util.py  ising1d_dynamics_opt.c  ising1d_dynamics_opt.py  ising1d_dynamics_opt_comparison.py  ising1d_dynamics_opt_data.py  ising1d_dynamics_opt_n3.hdf5  ising1d_dynamics_opt_n3_init.hdf5  ising1d_dynamics_opt_n3_ref.hdf5  ising1d_dynamics_opt_sampling.c  ising1d_dynamics_opt_sampling_n3.hdf5
examples/molecular/: circuit.py  molecular_dynamics_circuit.py  molecular_dynamics_opt.c  molecular_dynamics_opt.hdf5  molecular_dynamics_opt_init.hdf5
examples/timing/: timing.c  timing.h
pymodule/: rqcopt_module.c
src/: apply_gate.c  apply_gate.h  brickwall_circuit.c  brickwall_circuit.h  brickwall_opt.c  brickwall_opt.h  circuit_opt.c  circuit_opt.h  config.h  gate.c  gate.h  matrix.c  matrix.h  parallel_gates.c  parallel_gates.h  pcg_basic.c  pcg_basic.h  quantum_circuit.c  quantum_circuit.h  rng.c  rng.h  statevector.c  statevector.h  target.c  target.h  trust_region.c  trust_region.h  util.c  util.h
test/: .gitignore  apply_gate.py  file_io.c  file_io.h  io_util.c  io_util.h  io_util.py  minunit.h  numerical_gradient.c  numerical_gradient.h  run_tests.c  test_apply_gate.c  test_apply_gate.py  test_brickwall_circuit.c  test_brickwall_circuit.py  test_gate.c  test_gate.py  test_matrix.c  test_matrix.py  test_parallel_gates.c  test_parallel_gates.py  test_quantum_circuit.c  test_quantum_circuit.py  test_statevector.c  test_statevector.py  test_target.c  test_target.py  test_trust_region.c  test_trust_region.py
test/data/: target_gradient_vector_hessian_matrix_cplx.hdf5  test_apply_adjoint_brickwall_unitary_cplx.hdf5  test_apply_adjoint_brickwall_unitary_real.hdf5  test_apply_brickwall_unitary_cplx.hdf5  test_apply_brickwall_unitary_real.hdf5  test_apply_gate_backward_cplx.hdf5  test_apply_gate_backward_real.hdf5  test_apply_gate_cplx.hdf5  test_apply_gate_placeholder_cplx.hdf5  test_apply_gate_placeholder_real.hdf5  test_apply_gate_real.hdf5  test_apply_gate_to_array_cplx.hdf5  test_apply_gate_to_array_real.hdf5  test_apply_parallel_gates_cplx.hdf5  test_apply_parallel_gates_directed_grad_cplx.hdf5  test_apply_parallel_gates_directed_grad_real.hdf5  test_apply_parallel_gates_real.hdf5  test_apply_quantum_circuit_cplx.hdf5  test_apply_quantum_circuit_real.hdf5  test_blockenc_target_and_gradient_cplx.hdf5  test_blockenc_target_and_gradient_real.hdf5  test_blockenc_target_and_gradient_vector_cplx.hdf5  test_blockenc_target_cplx.hdf5  test_blockenc_target_gradient_hessian_cplx.hdf5  test_blockenc_target_gradient_hessian_real.hdf5  test_blockenc_target_gradient_vector_hessian_matrix_cplx.hdf5  test_blockenc_target_real.hdf5  test_brickwall_blockenc_target_and_gradient_real.hdf5  test_brickwall_blockenc_target_cplx.hdf5  test_brickwall_unitary_backward_cplx.hdf5  test_brickwall_unitary_backward_hessian_cplx.hdf5  test_brickwall_unitary_backward_hessian_real.hdf5  test_brickwall_unitary_backward_real.hdf5  test_brickwall_unitary_grad_matfree_cplx.hdf5  test_brickwall_unitary_grad_matfree_real.hdf5  test_brickwall_unitary_gradient_vector_matfree_cplx.hdf5  test_brickwall_unitary_hess_matfree_cplx.hdf5  test_brickwall_unitary_hess_matfree_real.hdf5  test_brickwall_unitary_hessian_matrix_matfree_cplx.hdf5  test_brickwall_unitary_target_and_gradient_cplx.hdf5  (+59 more)
test/rqcopt_matfree/: __init__.py  brickwall_circuit_matfree.py  brickwall_opt_matfree.py  circuit_opt_matfree.py  gate.py  quantum_circuit_matfree.py  trust_region.py  util.py
